<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
<item
    android:title="Entertainment">
    <menu>
        <item
            android:id="@+id/item_Chat"
            android:title="@string/chat"
            android:icon="@drawable/ic_baseline_chat_24"
            />
        <item
            android:id="@+id/item_randomHighestMountains"
            android:title="@string/random_highest_mountains_app"
            android:icon="@drawable/ic_baseline_image_24"
            />
        <item
            android:id="@+id/item_restaurant"
            android:title="@string/restaurant_ordering"
            android:icon="@drawable/ic_baseline_restaurant_24"
            />
        <item
            android:id="@+id/item_dogOrCat"
            android:title="@string/dog_or_cat_quiz"
            android:icon="@drawable/ic_baseline_pest_control_rodent_24"
            />
        <item
            android:id="@+id/item_music"
            android:title="@string/music_player"
            android:icon="@drawable/ic_baseline_library_music_24"
            />
        <item
            android:id="@+id/item_video"
            android:title="@string/video_player"
            android:icon="@drawable/ic_baseline_video_library_24"
            />
        <item
            android:id="@+id/item_connect3"
            android:title="@string/connect_3"
            android:icon="@drawable/ic_baseline_videogame_asset_24"
            />
        <item
            android:id="@+id/item_passingBioData"
            android:title="@string/passing_bio_data"
            android:icon="@drawable/ic_baseline_data_usage_24"
            />
    </menu>
</item>
    <item
        android:title="@string/tools">
        <menu>
            <item
                android:id="@+id/item_calculator"
                android:title="@string/calculator_app"
                android:icon="@drawable/ic_baseline_calculate_24"
                />
            <item
                android:id="@+id/item_tempConverter"
                android:title="@string/temperature_converter"
                android:icon="@drawable/ic_baseline_swap_horiz_24"
                />
            <item
                android:id="@+id/item_yatGroup"
                android:title="@string/yat_group"
                android:icon="@drawable/ic_baseline_groups_24"
                />
            <item
                android:id="@+id/item_googleMaps"
                android:title="@string/getcurrentlocation"
                android:icon="@drawable/ic_baseline_map_24"
                />
            <item
                android:id="@+id/item_javaTpoingWebsite"
                android:title="@string/javatpoint_website"
                android:icon="@drawable/ic_baseline_web_24"
                />
            <item
                android:id="@+id/item_pdfView"
                android:title="@string/mobile_track_pdf"
                android:icon="@drawable/ic_baseline_picture_as_pdf_24"
                />
        </menu>
    </item>
    <item
        android:id="@+id/item_signOut"
        android:title="@string/sign_out"
        android:icon="@drawable/ic_baseline_exit_to_app_24"
        />
</menu>