<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/_20sdp"
        tools:context=".entertainment.DogOrCatQuiz">


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_200sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:src="@drawable/dog_or_cat"
            android:contentDescription="@string/dogorcatquizimage" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_10sdp"
            android:gravity="center"
            android:text="@string/welcome_to_dog_or_cat_quiz"
            android:textColor="@color/purple_500"
            android:textSize="@dimen/_15sdp"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_4sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:background="@color/purple_500" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_10sdp"
            android:gravity="center"
            android:text="@string/when_talking_to_someone_do_you_maintain_eye_contact"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/rgQuestion1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rbNever"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/never"
                android:textSize="@dimen/_8sdp" />

            <RadioButton
                android:id="@+id/rbAlways"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/always"
                android:textSize="@dimen/_8sdp" />

            <RadioButton
                android:id="@+id/rbSomeTimes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/some_times"
                android:textSize="@dimen/_8sdp" />
        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_10sdp"
            android:gravity="center"
            android:text="@string/how_often_do_you_hug_people"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/rgQuestion2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rbALlTheTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/all_the_time"
                android:textSize="@dimen/_8sdp" />

            <RadioButton
                android:id="@+id/rbNotPhysicalPerson"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/not_physical_person"
                android:textSize="@dimen/_8sdp" />

            <RadioButton
                android:id="@+id/rbOccasionally"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/occasionally"
                android:textSize="@dimen/_8sdp" />
        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_10sdp"
            android:gravity="center"
            android:text="@string/how_many_times_you_love_someone"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/rgQuestion3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rbDaily"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/daily"
                android:textSize="@dimen/_8sdp" />

            <RadioButton
                android:id="@+id/rbFromTimeToTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/from_time_to_time"
                android:textSize="@dimen/_8sdp" />

            <RadioButton
                android:id="@+id/rbWeekly"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/weekly"
                android:textSize="@dimen/_8sdp" />
        </RadioGroup>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_getResult"
            android:layout_width="@dimen/_150sdp"
            android:layout_height="@dimen/_40sdp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_30sdp"
            android:background="@drawable/button_design"
            android:text="@string/get_result"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tx_quizResult"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_20sdp"
            android:gravity="center"
            android:text="@string/you_are_a"
            android:textColor="@color/black" />

    </LinearLayout>
</ScrollView>
