<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".utils.ForgetPasswordActivity">

    <ImageView
        android:layout_width="@dimen/_120sdp"
        android:layout_height="@dimen/_120sdp"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_15sdp"
        android:contentDescription="@string/mega_logo"
        android:src="@drawable/megalogo"
        android:visibility="visible" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="@string/forget_password"
        android:textColor="#000"
        android:textSize="@dimen/_20sdp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/et_recoveryMail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="90dp"
        android:autofillHints=""
        android:background="@drawable/edit_text_design"
        android:gravity="center"
        android:hint="@string/please_enter_your_recovery_mail"
        android:inputType="textEmailAddress"
        android:padding="@dimen/_15sdp"
        android:textColor="@color/black" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:text="@string/once_you_wrote_your_recovery_mail_and_clicked_on_send_verficiation_link_button_you_will_receive_an_email_to_reset_your_password"
        android:textColor="#858484"
        android:textSize="@dimen/_10sdp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_resetPassword"
        android:layout_width="@dimen/_150sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_30sdp"
        android:background="@drawable/button_design"
        android:text="@string/reset_password"
        android:textColor="@color/white"
        android:textStyle="bold" />


</LinearLayout>