<?xml version="1.0" encoding="utf-8"?>
<LinearLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/_20sdp"
    tools:context=".tools.TemperatureConverter">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="@string/welcome_to_our_temperature_converter_app"
        android:textColor="@color/black"
        android:textSize="@dimen/_12sdp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_2sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@color/purple_500" />


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/_150sdp"
        android:contentDescription="@string/temperature_converter_image"
        android:src="@drawable/temp_converter" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/_10sdp">

        <EditText
            android:id="@+id/etFahrenheit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@drawable/edit_text_design"
            android:gravity="center"
            android:hint="@string/fahrenheit"
            android:inputType="numberDecimal"
            android:padding="@dimen/_10sdp"
            android:textColor="@color/black" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/_10sdp"
            android:src="@drawable/ic_baseline_compare_arrows_24" />

        <EditText
            android:id="@+id/etCelsius"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@drawable/edit_text_design"
            android:gravity="center"
            android:hint="@string/celsius"
            android:inputType="numberDecimal"
            android:padding="@dimen/_10sdp"
            android:textColor="@color/black" />
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnConvert"
        android:layout_width="@dimen/_150sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_30sdp"
        android:background="@drawable/button_design"
        android:text="@string/convert"
        android:textColor="@color/white"
        android:textStyle="bold" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_resetTemperatureValues"
        android:layout_width="@dimen/_150sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_30sdp"
        android:background="@drawable/button_design"
        android:text="@string/reset_values"
        android:textColor="@color/white"
        android:textStyle="bold" />
</LinearLayout>